salvia_macro/tests/query_ui/fail/arg_traits_no_stashable.rs
use std::marker::{PhantomData};
use salvia::{query, QueryContext};

#[derive(Hash)]
struct A(PhantomData<* mut ()>);

#[query]
async fn f(_a: A, _cx: &QueryContext) {}

fn main() {}
